<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProviderActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/textprovider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <TextView
            android:id="@+id/t"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="( The first time of log in, personal information must be entered.  After changing the information, press SUBMIT to update.)" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Address"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/addbox"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:ems="10"
            android:inputType="text" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Phone Number"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/phonebox"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:ems="10"
            android:inputType="number|phone" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Name of Company"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/companybox"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:ems="10"
            android:inputType="text" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="General Description"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/descripbox"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:ems="10"
            android:inputType="text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="310dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Licensed"
                android:textColor="@android:color/black" />

            <Spinner
                android:id="@+id/spinnerLic"
                android:layout_width="match_parent"
                android:layout_height="28dp"
                android:layout_weight="1"
                android:baselineAligned="false" />

        </LinearLayout>

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:onClick="newProvider"
            android:text="submit" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <Button
            android:id="@+id/choose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="OnSetChooseButton"
            android:text="choose services and time" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <TextView
            android:id="@+id/hintprovider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>